--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -38,7 +38,7 @@
         [% IF page == "data_calendar" %]
             <link rel="stylesheet" href="[% url.css %]/calendar.min.css">
         [% END %]
-        [% IF page == "data_timeline" %]
+        [% IF page == "data_timeline" OR page == "index" %]
             <link rel="stylesheet" href="[% url.css %]/timeline.min.css">
             <link rel="stylesheet" href="[% url.css %]/tippy.css">
             <link rel="stylesheet" href="[% url.css %]/light.css">
@@ -59,7 +59,7 @@
                 <link rel="stylesheet" href="[% scheme %]://cdn.datatables.net/plug-ins/9dcbecd42ad/integration/bootstrap/3/dataTables.bootstrap.css">
             [% END %]
         [% END %]
-        [% IF page == "config" || page == "system" %]
+        [% IF page == "config" || page == "system" || page == "index" %]
             <link href="[% url.css %]/summernote.css" rel="stylesheet">
         [% END %]
 
@@ -210,16 +210,14 @@
                 });
             </script>
         [% END %]
-        [% IF page.match('(edit|bulk|approval|view|layout|data)') %]
-            <script type="text/javascript" src="[% url.js %]/base64.min.js"></script>
-        [% END %]
+        <script type="text/javascript" src="[% url.js %]/base64.min.js"></script>
         [% IF page == "login" %]
             <script type="text/javascript" src="[% url.js %]/login.js"></script>
             <!--[if (gte IE 6)&(lte IE 8)]>
                 <script type="text/javascript" src="[% url.js %]/selectivizr-min.js"></script>
             <![endif]-->
         [% END %]
-        [% IF page == "data_graph" %]
+        [% IF page == "data_graph" OR page == "index" %]
             <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="/js/excanvas.min.js"></script><![endif]-->
             <script language="javascript" type="text/javascript" src="[% url.js %]/jquery.jqplot.min.js"></script>
             <script language="javascript" type="text/javascript" src="[% url.js %]/jqplot/jqplot.highlighter.min.js"></script>
@@ -248,7 +246,7 @@
         [% IF page == "data_calendar" %]
             <script type="text/javascript" src="[% url.js %]/calendar.min.js"></script>
         [% END %]
-        [% IF page == "data_timeline" %]
+        [% IF page == "data_timeline" OR page == "index" %]
             [% IF page_as_mech %]
                 <script type="text/javascript" src="[% url.js %]/requestAnimationFrame.min.js"></script>
                 [% IF hostlocal %]
@@ -260,7 +258,7 @@
             <script type="text/javascript" src="[% url.js %]/timeline.min.js"></script>
             <script type="text/javascript" src="[% url.js %]/tippy.min.js"></script>
         [% END %]
-        [% IF page == "data_globe" %]
+        [% IF page == "data_globe" OR page == "index" %]
             [% IF hostlocal %]
                 <script type="text/javascript" src="[% url.js %]/plotly-geo-1.38.2.js"></script>
             [% ELSE %]
@@ -294,7 +292,14 @@
             [% END %]
         [% END %]
 
+        [% IF page.match('(layout|edit|approval|bulk)') %]
+            <script src="[% url.js %]/jstree.min.js"></script>
+            <script src="[% url.js %]/jstree-misc.js"></script>
+            <script src="[% url.js %]/bootstrap-select.min.js"></script>
+        [% END %]
+
         <script type="text/javascript" src="[% url.js %]/jquery.placeholder.js"></script>
+        <script src="[% url.js %]/linkspace.js"></script>
         <script type="text/javascript">
             $('[data-toggle="popover"]').popover({placement:'auto', html:true});
             if (typeof jscode != 'undefined') {
@@ -304,13 +309,6 @@
         </script>
 
 
-        [% IF page.match('(layout|edit|approval|bulk)') %]
-            <script src="[% url.js %]/jstree.min.js"></script>
-            <script src="[% url.js %]/jstree-misc.js"></script>
-            <script src="[% url.js %]/bootstrap-select.min.js"></script>
-        [% END %]
-
-        <script src="[% url.js %]/linkspace.js"></script>
         <!--[if IE 8]><script src="[% url.js %]/dashboard-ie8-fallback.js"></script><![endif]-->
         <!--[if !IE 8]><!--><script src="[% url.js %]/general.js"></script><!--<![endif]-->
     </body>
