--- a/views/login.tt
+++ b/views/login.tt
@@ -61,7 +61,7 @@
                         </div>
                         [% UNLESS site.hide_account_request %]
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                <button type="button" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</button>
+                                <button type="button" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request Account</button>
                             </div>
                         [% END %]
                     </div>
