--- a/views/graph.tt
+++ b/views/graph.tt
@@ -71,7 +71,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="email">Plot against metrics (optional):</label>
+                <label for="email">Plot against <a href="/[% layout.identifier %]/metrics">metrics</a> (optional):</label>
                 <select class="form-control" name="metric_group_id">
                     <option value="" [% UNLESS graph.metric_group_id %]selected[% END %]></option>
                     [% FOREACH metric_group IN metric_groups %]
