--- a/views/index.tt
+++ b/views/index.tt
@@ -1,6 +1,6 @@
 <div id="ld-app" class="react-grid-layout" data-dashboard="[% dashboard.id %]"
     data-dashboard-endpoint="/[% layout.identifier %]/api/dashboard"
-    data-widget-types='["graph", "chart", "table", "bar"]'
+    data-widget-types='["notice", "table", "graph", "timeline", "globe"]'
 >
     [% FOREACH widget IN dashboard.widgets %]
         <div class="ld-widget-container" data-grid='[% widget.grid %]'>
