Add dashboard ID to all widget calls

--- a/views/index.tt
+++ b/views/index.tt
@@ -1,5 +1,5 @@
 <div id="ld-app" class="react-grid-layout" data-dashboard="[% dashboard.id %]"
-    data-dashboard-endpoint="/[% layout.identifier %]/api/dashboard"
+    data-dashboard-endpoint="/[% layout.identifier %]/api/dashboard/[% dashboard.id %]"
     data-widget-types='["notice", "table", "graph", "timeline", "globe"]'
 >
     [% FOREACH widget IN dashboard.widgets %]
