--- a/src/header.scss
+++ b/src/header.scss
@@ -1,10 +1,3 @@
 .ld-header-container {
-  padding: 12px;
-  margin-top: 10px;
-  border: solid gray 1px;
-  > * {
-    vertical-align: top;
-    display: inline-block;
-    margin-right: 12px;
-  }
+  text-align: right;
 }
