Various dashboard updates

--- a/views/index.tt
+++ b/views/index.tt
@@ -1,16 +1,9 @@
-<form method="get" action="" class="well well-sm form-inline">
-    <div class="form-group">
-        <select name="dashboard-id" class="form-control">
-            <option value="4">Global dashboard</option>
-            <option value="5">Administrator dashboard</option>
-        </select>
-    </div>
-    <button class="btn btn-primary">Switch</button>
-</form>
-
-<div id="ld-app" class="react-grid-layout" data-dashboard="[% dashboard.id %]"
+<p></p> [%# Add space between buttons and line above. A better way? %]
+<div id="ld-app" class="react-grid-layout" data-dashboard-id="[% dashboard.id %]"
+    data-dashboard-name="[% dashboard.name | html %]"
     data-dashboard-endpoint="/[% layout.identifier %]/api/dashboard/[% dashboard.id %]"
     data-widget-types='["notice", "table", "graph", "timeline", "globe"]'
+    data-dashboards="[% dashboards_json | html %]"
 >
     [% FOREACH widget IN dashboard.widgets %]
         <div class="ld-widget-container" data-grid='[% widget.grid %]'>
