--- a/views/index.tt
+++ b/views/index.tt
@@ -1,7 +1,7 @@
 <p></p> [%# Add space between buttons and line above. A better way? %]
 <div id="ld-app" class="react-grid-layout" data-dashboard-id="[% dashboard.id %]"
     data-dashboard-name="[% dashboard.name | html %]"
-    data-dashboard-endpoint="/[% layout.identifier %]/api/dashboard/[% dashboard.id %]"
+    data-dashboard-endpoint="[% IF layout %]/[% layout.identifier %][% END %]/api/dashboard/[% dashboard.id %]"
     data-widget-types='["notice", "table", "graph", "timeline", "globe"]'
     data-dashboards="[% dashboards_json | html %]"
 >
