Add read-only (static) mode to individual widgets

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -17,7 +17,7 @@
     background-color: #ebebeb !important;
     opacity: 1; }
 
-.react-grid-layout--editable .ld-widget-container:hover {
+.ld-widget-container--editable:hover {
   border-color: #e8e8e8; }
 
 .ld-draggable-handle {
