--- a/views/table.tt
+++ b/views/table.tt
@@ -43,7 +43,7 @@
                             <th>Manage fields</th>
                             <th>Send messages</th>
                             <th>Create and edit views</th>
-                            <th>Create and edit group views</th>
+                            <th>Create and edit group views and graphs</th>
                             <th>Create and edit child records</th>
                             <th>Bulk update records</th>
                             <th>Create and manage linked records</th>
