--- a/views/graphs.tt
+++ b/views/graphs.tt
@@ -1,27 +1,85 @@
 <h2>Graphs</h2>
-<p>Use this page to create, delete and edit graphs. Graphs can only be created by an
-administrator, and will be displayed (by default) to all users. Users can individually
-de-select graphs that they do not wish to be displayed.</p>
 <p>
     <a href="/[% layout.identifier %]/graph/0" class="btn btn-default" role="button">Create new graph</a>
 </p>
-<table class="table table-striped">
-    <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Type</th>
-        <th>X-axis</th>
-        <th>Y-axis</th>
-        <th>Group by</th>
-    </tr>
-    [% FOREACH graph IN graphs %]
-        <tr>
-            <td><a href="/[% layout.identifier %]/graph/[% graph.id %]">Edit</a></td>
-            <td>[% graph.title | html_entity %]
-            <td>[% graph.type.ucfirst %]</td>
-            <td>[% layout.column(graph.x_axis).name | html_entity %]</td>
-            <td>[% layout.column(graph.y_axis).name | html_entity %]</td>
-            <td>[% layout.column(graph.group_by).name | html_entity %]</td>
-        </tr>
-    [% END %]
-</table>
+<div class="row">
+    <div class="col-md-12">
+        [% IF graphs.size %]
+            <p>Use this page to configure what graphs are displayed on your home page. New
+            graphs can only be added by an administrator.</p>
+            <form role="form" method="post">
+                <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+                <table class="table table-striped dtable">
+                    <thead>
+                        <tr>
+                            <th>Selected</th>
+                            <th>Edit</th>
+                            <th>Title</th>
+                            <th>Type</th>
+                            <th>X-axis</th>
+                            <th>Y-axis</th>
+                            <th>Group by</th>
+                        </tr>
+                    </thead>
+                    </body>
+                        [% FOREACH graph IN graphs %]
+                            <tr>
+                                <td>
+                                    <input type="checkbox" name="graphs" value="[% graph.id %]"[% IF graph.selected %]checked[% END %]>
+                                </td>
+                                <td>
+                                    [% IF graph.writable %]
+                                        <a href="/[% layout.identifier %]/graph/[% graph.id %]">Edit</a></td>
+                                    [% ELSE %]
+                                        Read-only
+                                    [% END %]
+                                <td>[% graph.title | html %]
+                                <td>[% graph.type.ucfirst %]</td>
+                                <td>[% layout.column(graph.x_axis).name | html %]</td>
+                                <td>[% layout.column(graph.y_axis).name | html %]</td>
+                                <td>[% layout.column(graph.group_by).name | html %]</td>
+                            </tr>
+                        [% END %]
+                </table>
+                <div style="height:55px;"></div>
+                <nav class="navbar navbar-default navbar-fixed-bottom" style="min-height:55px">
+                    <div class="container">
+                        <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </nav>
+
+            </form>
+        [% ELSIF layout.user_can("layout") %]
+            <p>
+                No graphs have been created. Please visit <a href="/[% layout.identifier %]/graph">Manage Graphs</a> to create some.
+            </p>
+        [% ELSE %]
+            <p>
+                No graphs have been created yet. Please contact an administrator to create some graphs.
+                Once graphs have been created, you can select them from this page.
+            </p>
+        [% END %]
+    </div>
+</div>
+
+<script type="text/javascript">
+    var jscode='[% FILTER remove('\n+') %]
+        [% FILTER replace('\'', '\\\'') %]
+            $(document).ready(function () {
+                    $('.dtable').dataTable({
+                        "columnDefs": [
+                            {
+                                "targets": 0,
+                                "orderable": false
+                            }
+                        ],
+                        "pageLength": 50,
+                        order: [
+                            [ 1, 'asc' ]
+                        ]
+                    });
+            });
+        [% END %]
+    [% END %]';
+</script>
+
