--- a/public/css/general.css
+++ b/public/css/general.css
@@ -70,6 +70,9 @@
 
 .ld-header-container {
   text-align: right; }
+  .ld-header-container .spinner {
+    display: inline-block;
+    margin-right: 10px; }
 
 .react-grid-layout {
   position: relative;
