--- a/src/app.scss
+++ b/src/app.scss
@@ -76,6 +76,9 @@
 
 .ld-modal__content-container {
   min-height: 100px;
+  max-height: 80vh;
+  max-height: calc(100vh - 120px); // 120px = height of header and footer combined with some margin
+  overflow-y: scroll;
   position: relative;
   padding: 15px;
 }
