Display edit button as a small icon at the bottom of the widget

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,25 +4,17 @@
   border: 1px solid transparent;
 
   .ld-draggable-handle,
+  .ld-edit-button,
   .react-resizable-handle {
     transition: opacity 0.2s;
     opacity: 0.2;
-  }
-
-  .ld-edit-button {
-    transition: opacity 0.2s, background-color 0.2s;
-    background-color: transparent !important;
-    opacity: 0.2;
+    color: #333;
   }
 
   &:hover {
     .ld-draggable-handle,
+    .ld-edit-button,
     .react-resizable-handle {
-      opacity: 1;
-    }
-
-    .ld-edit-button {
-      background-color: #ebebeb !important;
       opacity: 1;
     }
   }
@@ -34,19 +26,22 @@
   }
 }
 
-.ld-draggable-handle {
+.ld-draggable-handle,
+.ld-edit-button {
   position: absolute;
   width: 20px;
   height: 20px;
   bottom: 0;
+}
+
+.ld-draggable-handle {
   right: 20px;
   cursor: move;
 }
 
 .ld-edit-button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
+  right: 44px;
+  cursor: pointer;
 }
 
 .ld-modal__header {
