--- a/public/css/general.css
+++ b/public/css/general.css
@@ -3,35 +3,33 @@
   overflow: hidden;
   border: 1px solid transparent; }
   .ld-widget-container .ld-draggable-handle,
+  .ld-widget-container .ld-edit-button,
   .ld-widget-container .react-resizable-handle {
     transition: opacity 0.2s;
-    opacity: 0.2; }
-  .ld-widget-container .ld-edit-button {
-    transition: opacity 0.2s, background-color 0.2s;
-    background-color: transparent !important;
-    opacity: 0.2; }
+    opacity: 0.2;
+    color: #333; }
   .ld-widget-container:hover .ld-draggable-handle,
+  .ld-widget-container:hover .ld-edit-button,
   .ld-widget-container:hover .react-resizable-handle {
-    opacity: 1; }
-  .ld-widget-container:hover .ld-edit-button {
-    background-color: #ebebeb !important;
     opacity: 1; }
 
 .ld-widget-container--editable:hover {
   border-color: #e8e8e8; }
 
-.ld-draggable-handle {
+.ld-draggable-handle,
+.ld-edit-button {
   position: absolute;
   width: 20px;
   height: 20px;
-  bottom: 0;
+  bottom: 0; }
+
+.ld-draggable-handle {
   right: 20px;
   cursor: move; }
 
 .ld-edit-button {
-  position: absolute;
-  top: 8px;
-  right: 8px; }
+  right: 44px;
+  cursor: pointer; }
 
 .ld-modal__header {
   padding: 14px 12px;
