--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -7,7 +7,7 @@
         <div>
             <h3>[% graph.title | html_entity %]</h3>
             [% IF graph.description %]<p>[% graph.description | html_entity %]</p>[% END %]
-            <div id="chartdiv[% graph.id %]" style="height:400px;width:600px; "></div>
+            <div id="chartdiv[% graph.id %]" style="height:400px;width:80%; "></div>
             <p><a href="?png=[% graph.id %]">PNG</a> | <a href="?csv=[% graph.id %]">CSV</a></p>
         </div>
         [% count = count + 1 %]
