--- a/views/index.tt
+++ b/views/index.tt
@@ -7,7 +7,7 @@
     [% ELSE %]
         data-widget-types='["notice"]'
     [% END %]
-    data-dashboard-read-only="false"
+    data-dashboard-read-only="[% IF readonly %]true[% ELSE %]false[% END %]"
     data-dashboards="[% dashboards_json | html %]"
 >
     [% FOREACH widget IN dashboard.display_widgets %]
