Show widget table headings as normal text

--- a/views/snippets/widget_content.tt
+++ b/views/snippets/widget_content.tt
@@ -1,4 +1,5 @@
 <h4>[% title | html %]</h4>
+[% widget = 1 %]
 [% IF type == "table" %]
     [% PROCESS snippets/data_table_inner.tt %]
 [% ELSIF type == "graph" %]
