--- a/views/snippets/data_globe_inner.tt
+++ b/views/snippets/data_globe_inner.tt
@@ -1,1 +1,6 @@
-<div class="globe" style="width:100%;margin-left:0;height:70vh;margin-top:0" data-globe-data="[% globe_data %]" data-topojsonurl="/js/"></div>
+<div class="globe"
+    [% UNLESS widget %]
+         style="width:100%;margin-left:0;height:70vh;margin-top:0"
+    [% END %]
+    data-globe-data="[% globe_data %]" data-topojsonurl="/js/">
+</div>
