--- a/views/index.tt
+++ b/views/index.tt
@@ -1,6 +1,6 @@
 <p></p> [%# Add space between buttons and line above. A better way? %]
 <div id="ld-app" class="react-grid-layout" data-dashboard-id="[% dashboard.id %]"
-    data-dashboard-name="[% dashboard.name | html %]"
+    data-current-dashboard="[% dashboard.as_json | html %]"
     data-dashboard-endpoint="[% IF layout %]/[% layout.identifier %][% END %]/api/dashboard/[% dashboard.id %]"
     [% IF dashboard.instance_id %]
         data-widget-types='["notice", "table", "graph", "timeline", "globe"]'
@@ -8,6 +8,7 @@
         data-widget-types='["notice"]'
     [% END %]
     data-dashboard-read-only="[% IF readonly %]true[% ELSE %]false[% END %]"
+    data-dashboard-hide-menu="[% IF page_as_mech %]true[% ELSE %]false[% END %]"
     data-dashboards="[% dashboards_json | html %]"
 >
     [% FOREACH widget IN dashboard.display_widgets %]
