--- a/views/data.tt
+++ b/views/data.tt
@@ -135,7 +135,7 @@
                                 <li role="presentation"><a role="menuitem" tabindex="-1"
                                         href="/[% layout.identifier %]/data?download[% IF filter_url %]&[% filter_url %][% END %]">Download records</a></li>
                             [% END %]
-                            [% INCLUDE 'extra_presentation_roles.tt' %]
+                            [% INCLUDE 'extension/data_action_menu_extra.tt' %]
                         </ul>
                     </div>
                 [% END %]
@@ -198,7 +198,7 @@
         [% END %]
     </div>
 
-[% INCLUDE 'extra_views.tt' %]
+[% INCLUDE 'extension/data_footer.tt' %]
 
 [% IF viewtype == "graph" %]
     [% INCLUDE 'data_graph.tt' %]
